# bluespec-cmake

./: .gitignore  BluesimExecutable.cmake  BluesimSystemC.cmake  BluesimWaveform.cmake  BluespecCMake.cmake  BluespecCMakeConfig.cmake.in  BluespecLibrary.cmake  BluespecPaths.cmake  BluespecTargets.cmake  BluespecUtils.cmake  BluespecVerilogGeneration.cmake  CMakeLists.txt  FindBluespecToolchain.cmake  LICENSE  README.md  bluespec-cmake-config.cmake.in  default.nix  flake.nix  synmodules.tcl
experiments/shared-components/: CMakeLists.txt  README.md
experiments/shared-components/bsv/: TopLib.bsv
tests/: CMakeLists.txt
tests/classic/: CMakeLists.txt  check.cmake
tests/classic/bsv/: Classic.bs  TbC.bsv
tests/shared-components/: CMakeLists.txt  check.cmake
tests/shared-components/bsv/: Base.bsv  Extra.bsv  Left.bsv  Right.bsv  Tb.bsv
tests/waveform/: CMakeLists.txt  check.cmake
tests/waveform/bsv/: WaveTb.bsv
tools/: bsc_cmake_driver.py  bsc_graph.py
